--- a/src/app/pages/tours-details/tours-details.component.css
+++ b/src/app/pages/tours-details/tours-details.component.css
@@ -177,7 +177,7 @@ p{
     flex-direction: row;
     gap: 16px;
     justify-content: space-between;
-    align-items: end;
+    align-items: flex-end;
 }
 
 .ticket-card>div:first-child{
