--- a/src/app/components/filter-bar/filter-bar.component.css
+++ b/src/app/components/filter-bar/filter-bar.component.css
@@ -63,7 +63,7 @@
 #mapDisplayMode{
     display: flex;
     flex-direction: row;
-    justify-content: end;
+    justify-content: flex-end;
     gap:calc(var(--kPadding-reg)* 1.5);
 }
 
