--- a/src/app/pages/contactus-page/contactus-page.component.css
+++ b/src/app/pages/contactus-page/contactus-page.component.css
@@ -24,7 +24,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: end;
+    align-items: flex-end;
 }
 .contact-form input, .contact-form textarea {
     width: calc(100% - 20px);
