--- a/src/app/pages/contactus-page/contactus-page.component.css
+++ b/src/app/pages/contactus-page/contactus-page.component.css
@@ -1,16 +1,28 @@
+
+
 .hero {
     background: linear-gradient(to right, #ff7e5f, #feb47b);
     color: #fff;
     text-align: center;
     padding: 50px 20px;
+    font-weight: 800;
+    font-family: var(--kFont-Jos);
+}
+.hero p {
+    width: 50%;
+    align-self: center;
+    justify-self: center;
 }
 .contact-section {
     background-color: #f5f5f5;
-    padding: 50px 20px;
+    padding: 50px 0;
     text-align: center;
+    width: 100%;
 }
 .contact-section h2 {
     margin-bottom: 20px;
+    font-weight: 800;
+    font-family: var(--kFont-Jos);
 }
 .contact-form {
     background-color: #f0d5b1;
@@ -74,8 +86,19 @@
     gap: 32px;
 }
 
+
 @media (max-width: 768px) {
-    .contact-form {
-        width: 90%;
+    .hero p {
+        width: 100%;
+        align-self: center;
+        justify-self: center;
     }
+    .contact-form {
+        max-width: 90%;
+        padding: 32px ;
+    }
+    .contact-form button {
+        width: 30%;
+    }
+    
 }
