--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,1 +1,18 @@
-<p>brand works!</p>
+<div class="tours-stats">
+    <div class="tag">
+        <h2>221</h2>
+        <p>total tours</p>
+    </div>
+    <div class="tag">
+        <h2>221,212</h2>
+        <p>Satisfied toursists</p>
+    </div>
+    <div class="tag">
+        <h2>1,213</h2>
+        <p>Talented guides</p>
+    </div>
+    <div class="tag">
+        <h2>42</h2>
+        <p>Partners</p>
+    </div>
+</div>
