--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -1,10 +1,11 @@
 <div class="slider">
-    <div class="slide">
-      <img src="/assets/imgs/Pyramids.jpg" alt="Pyramids">
-      <div class="text-overlay">
-        <h1>Where Civilization Began</h1>
-        <button><a href="#about">Explore</a></button>
-      </div>
+  <div class="slide">
+    <img src="/assets/imgs/Pyramids.jpg" alt="Pyramids">
+    <div class="text-overlay">
+      <h1>Where Civilization Began</h1>
+      <h3>checkout our latest event in Luxor.</h3>
+      <button><a href="#about">Explore</a></button>
     </div>
   </div>
+</div>
   
