--- a/src/app/components/tours-home/tours-home.component.html
+++ b/src/app/components/tours-home/tours-home.component.html
@@ -4,30 +4,23 @@
 
     <div class="tour-list">
         <div class="tour-card">
-            <h3>Cairo City Tour</h3>
-            <div className="images">
-                <div class="main-img">
-                    <img src="" alt="">
-                </div>
-                <div class="sub-image">
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
-                </div>
+            <div class="images">
+                <img src="" alt="" class="main-img">
+                <img src="" alt="" class="sub-image">
+                <img src="" alt="" class="sub-image">
             </div>
+            <h3>Cairo City Tour</h3>
             <p>Discover the heart of Egypt’s capital.</p>
             <button>Learn More</button>
         </div>
+
         <div class="tour-card">
-            <h3>Giza Pyramids Tour</h3>
-            <div className="images">
-                <div class="main-img">
-                    <img src="" alt="">
-                </div>
-                <div class="sub-image">
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
-                </div>
+            <div class="images">
+                <img src="" alt="" class="main-img">
+                <img src="" alt="" class="sub-image">
+                <img src="" alt="" class="sub-image">
             </div>
+            <h3>Giza Pyramids Tour</h3>
             <p>Visit one of the seven wonders of the world.</p>
             <button>Learn More</button>
         </div>
