--- a/src/app/components/events-home/events-home.component.css
+++ b/src/app/components/events-home/events-home.component.css
@@ -14,6 +14,7 @@
     margin-bottom: 40px;
     font-size: 36px;
     color: #fff;
+    font-family: var(--kFont-Bebas);
   }
   
   
@@ -40,14 +41,20 @@
     width: 100%;
     height: 300px;
     background-color: #dda86f;
+    border-radius: 10px;
+    object-fit: cover;
   }
   .event-card h3 {
-    font-size: 24px;
-    margin-bottom: 10px;
+    font-family: var(--kFont-Bebas);
+    font-size: 28px;
+    margin: 10px 0;
+    text-align: left;
   }
   
   .event-card p {
-    margin-bottom: 20px;
+    margin-bottom: 16px;
+    text-align: left;
+    font-family: var(--kFont-Jos);
   }
   
   .event-card button {
@@ -63,31 +70,7 @@
     transform: scale(1.01);
     background-color: #0a5e9a;
   }
-  
-  /* Pagination dots */
-  .pagination {
-    text-align: center;
-    margin-top: 20px;
-  }
-  
-  .pagination .dot {
-    display: inline-block;
-    width: 12px;
-    height: 12px;
-    background-color:#f3dbc0;
-    border-radius: 50%;
-    margin: 0 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  .pagination .dot:hover {
-    background-color: #054e9d;
-  }
-  .pagination .dot:active {
-    background-color: #054e9d;
-  }
-  
+
   
   @media (max-width: 768px) {
     .event-card {
