--- a/src/app/components/tours-home/tours-home.component.css
+++ b/src/app/components/tours-home/tours-home.component.css
@@ -10,6 +10,7 @@
     text-align: center;
     margin-bottom: 40px;
     font-size: 36px;
+    font-family: var(--kFont-Bebas);
   }
   
   
@@ -24,19 +25,25 @@
     background-color: #DDA86F;
     padding: 20px;
     border-radius: 8px;
-    width: 40%;
+    width: 48%;
+    margin-bottom: 50px;
+    height: 500px;
     text-align: center;
-    margin-bottom: 20px;
     transition: transform 0.3s;
     cursor: pointer;
   }
   .tour-card h3 {
-    font-size: 24px;
-    margin-bottom: 10px;
+    font-size: 32px;
+    color: white;
+    font-family: var(--kFont-Bebas);
+    text-align: left;
+    margin: 10px 0;
   }
   
   .tour-card p {
+    font-family: var(--kFont-Jos);
     margin-bottom: 20px;
+    text-align: left;
     color: rgb(255, 255, 255);
   }
   
@@ -56,18 +63,26 @@
     transform: scale(1.05);
   }
   .images{
-    background-color: #f3dbc0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 20px;
     height: 70%;
-    width: 40%;
-    display: flex;
+    width: 100%;
     justify-content: space-between;
   }
   .images img{
-    width: 100px;
-    height: 100px;
+    background-color: white;
+    border-radius: 10px;
   }
   .main-img{
-    width: 200px;
+    grid-column: 1/2;
+    grid-row: 1/3;
+    width: 100%;
+    height: 100%;
+  }
+  .sub-image {
+    grid-column: 2/3;
   }
   @media (max-width: 991px){
     .tours {
@@ -80,7 +95,9 @@
   }
   
   @media (max-width: 768px) {
-  
+    .tours {
+      padding: 10px;
+    }
     .tour-card {
       width: 90%;
     }
