--- a/src/app/pages/payment/payment.component.html
+++ b/src/app/pages/payment/payment.component.html
@@ -7,13 +7,14 @@
                 correct before proceeding to payment.</p>
         </div>
         <div class="pricing p-3 rounded mt-4 d-flex justify-content-between">
-            <div class="images d-flex flex-row align-items-center"> <img src="https://i.imgur.com/S17BrTx.png"
-                    class="rounded" width="60">
-                <div class="d-flex flex-column ml-4"> <span class="business">Small Business</span> <span
-                        class="plan">CHANGE PLAN</span> </div>
+            <div class="images d-flex flex-row align-items-center"> <img src={{img2}} class="rounded" width="60">
+                <div class="d-flex flex-column ml-4"> <span class="business">{{eventTitle}}</span> <span
+                        class="plan">{{eventDescription}}</span>
+                </div>
             </div> <!--pricing table-->
-            <div class="d-flex flex-row align-items-center"> <sup class="dollar font-weight-bold">$</sup> <span
-                    class="amount ml-1 mr-1">8,350</span> <span class="year font-weight-bold">/ year</span> </div>
+            <div class="d-flex flex-row align-items-center"> <sup class="dollar font-weight-bold"></sup> <span
+                    class="amount ml-1 mr-1">{{ticketPrice}}</span> <span class="year font-weight-bold"> $</span>
+            </div>
             <!-- /pricing table-->
         </div> <span class="detail mt-5">Payment details</span>
         <div class="credit rounded mt-4 d-flex justify-content-between align-items-center">
