--- a/src/styles.css
+++ b/src/styles.css
@@ -94,7 +94,7 @@ button{
   padding: 12px;
   display: flex;
   gap: 16px;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 button:hover{
@@ -344,6 +344,7 @@ button.active{
   position: relative;
   max-height: fit-content;
   max-width: 250px;
+  min-width: 160px;
   height: fit-content;
   display: flex;
   gap: 16px;
