home page logic

--- a/src/app/pages/payment/payment.component.html
+++ b/src/app/pages/payment/payment.component.html
@@ -6,7 +6,7 @@
             <p class="text">Please review your order details below and complete your purchase. Ensure all information is
                 correct before proceeding to payment.</p>
         </div>
-        <div class="pricing p-3 rounded mt-4 d-flex justify-content-between">
+        <div class="pricing p-3 rounded mt-4 d-flex flex-column flex-md-row justify-content-between">
             <div class="images d-flex flex-row align-items-center"> <img src={{img2}} class="rounded" width="60">
                 <div class="d-flex flex-column ml-4"> <span class="business">{{eventTitle}}</span> <span
                         class="plan">{{eventDescription}}</span>
