--- a/src/app/components/events-home/events-home.component.html
+++ b/src/app/components/events-home/events-home.component.html
@@ -1,37 +1,17 @@
 <section class="events">
     <h1>Recent Events</h1>
     <div class="event-list">
-        <div class="event-card">
+        <div class="event-card" *ngFor="let event of events">
             <div class="img">
-                <img src="../../../assets/dark-pyramids.png" alt="Event1">
+                <img src={{event.img1}} alt="Event Img">
             </div>
             <div class="details">
-                <h3>Luxury Desert Safari</h3>
-                <p>Experience the beauty of the Egyptian desert.</p>
-                <button>Learn More</button>
+                <h3>{{event.title}}</h3>
+                <p>{{event.description}}</p>
+                <button [routerLink]="['/eventdetails',event.eventId]">Learn More</button>
             </div>
 
         </div>
-        <div class="event-card">
-            <div class="img">
-                <img src="../../../assets/imgs/bkg_one.jpg" alt="Event1">
-            </div>
-            <div class="details">
-                <h3>Luxury Desert Safari</h3>
-                <p>Experience the beauty of the Egyptian desert.</p>
-                <button>Learn More</button>
-            </div>
 
-        </div>
-        <div class="event-card">
-            <div class="img">
-                <img src="../../../assets/imgs/pattern_one.jpg" alt="Event1">
-            </div>
-            <div class="details">
-                <h3>Luxury Desert Safari</h3>
-                <p>Experience the beauty of the Egyptian desert.</p>
-                <button>Learn More</button>
-            </div>
-        </div>
     </div>
 </section>
