--- a/src/app/components/tours-home/tours-home.component.html
+++ b/src/app/components/tours-home/tours-home.component.html
@@ -3,26 +3,15 @@
     <div><app-brand></app-brand></div>
 
     <div class="tour-list">
-        <div class="tour-card">
+        <div class="tour-card" *ngFor="let tour of tours">
             <div class="images">
-                <img src="" alt="" class="main-img">
-                <img src="" alt="" class="sub-image">
-                <img src="" alt="" class="sub-image">
+                <img src={{tour.img1}} alt="" class="main-img">
+                <img src={{tour.img2}} alt="" class="sub-image">
+                <img src={{tour.img3}} alt="" class="sub-image">
             </div>
-            <h3>Cairo City Tour</h3>
-            <p>Discover the heart of Egypt’s capital.</p>
-            <button>Learn More</button>
-        </div>
-
-        <div class="tour-card">
-            <div class="images">
-                <img src="" alt="" class="main-img">
-                <img src="" alt="" class="sub-image">
-                <img src="" alt="" class="sub-image">
-            </div>
-            <h3>Giza Pyramids Tour</h3>
-            <p>Visit one of the seven wonders of the world.</p>
-            <button>Learn More</button>
+            <h3>{{tour.title}}</h3>
+            <p>{{tour.description}}</p>
+            <button [routerLink]="['/toursdetails',tour.eventId]">Learn More</button>
         </div>
     </div>
 </section>
