--- a/src/app/pages/payment/payment.component.html
+++ b/src/app/pages/payment/payment.component.html
@@ -35,8 +35,8 @@
         </div>
         <h6 class="mt-4 text-primary">ADD PAYMENT METHOD</h6>
         <div class="email mt-2"> <input type="text" class="form-control email-text" placeholder="Email Address"> </div>
-        <div class="mt-3"> <button class="btn btn-primary btn-block payment-button">Proceed to payment <i
-                    class="fa fa-long-arrow-right"></i></button> </div>
+        <div class="mt-3"> <button [routerLink]="['/success']" class="btn btn-primary btn-block payment-button">Proceed
+                to payment <i class="fa fa-long-arrow-right"></i></button> </div>
     </div>
 </div>
 
