--- a/src/app/pages/aboutus-page/aboutus-page.component.html
+++ b/src/app/pages/aboutus-page/aboutus-page.component.html
@@ -1,1 +1,48 @@
-<p>aboutus-page works!</p>
+<app-header></app-header>
+<div class="main">
+    <div class="hero">
+        <h1>GOTO Egypt</h1>
+        <h4>Your ultimate guide to discovering the wonders of Egypt!</h4>
+    </div>
+    <div class="section-one">
+        <p>From the timeless pyramids to the vibrant streets of Cairo, we are passionate about bringing Egypt’s rich history, culture, and breathtaking landscapes to life for travelers from all over the world. Whether you’re a history buff, an adventurer, or someone seeking relaxation on the beautiful shores of the Red Sea, we’ve got you covered.</p>
+        <img src="/assets/imgs/aboutus1.jpeg" alt="">
+    </div>
+    <div class="section-two">
+        <img src="/assets/imgs/aboutus2.jpg" alt="">
+        <p>Our mission is simple: to help you experience Egypt like a local, with expert tips, insider knowledge, and curated experiences that suit every type of traveler. We work with trusted guides, travel experts, and local businesses to create unique, unforgettable journeys tailored just for you.</p>
+    </div>
+    <div class="section-three">
+        <h1>Meet the team</h1>
+        <div class="section-three-two">
+            <p>We’re a small group of travel enthusiasts and tech experts who love Egypt and want to share its beauty with the world. Our team combines local knowledge, design, and technology to help you explore Egypt easily and enjoyably. We're here to make your journey unforgettable!</p>
+            <div class="team-images">
+                <div>
+                    <img src="/assets/imgs/aboutus1.jpeg" alt="">
+                    <p>Name</p>
+                </div>
+                <div>
+                    <img src="/assets/imgs/aboutus1.jpeg" alt="">
+                    <p>Name</p>
+                </div>
+                <div>
+                    <img src="/assets/imgs/aboutus1.jpeg" alt="">
+                    <p>Name</p>
+                </div>
+                <div>
+                    <img src="/assets/imgs/aboutus1.jpeg" alt="">
+                    <p>Name</p>
+                </div>
+                <div>
+                    <img src="/assets/imgs/aboutus1.jpeg" alt="">
+                    <p>Name</p>
+                </div>
+                <div>
+                    <img src="/assets/imgs/aboutus1.jpeg" alt="">
+                    <p>Name</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<app-footer></app-footer>
