--- a/src/app/pages/faq-page/faq-page.component.html
+++ b/src/app/pages/faq-page/faq-page.component.html
@@ -1,5 +1,5 @@
+<app-header></app-header>
 <div class="parent-container">
-    <app-header></app-header>
     <div class="faq-title">
         FAQ
     </div>
@@ -26,10 +26,7 @@
         <div class="divider"></div>
         <div class="faq-item">
             <h3>
-                3.
-                <a href="#">
-                    What payment methods do you accept?
-                </a>
+                3. What payment methods do you accept?
             </h3>
             <p>
                 We accept various payment methods including credit cards, debit cards, and PayPal.
@@ -85,5 +82,5 @@
             </p>
         </div>
     </div>
-    <app-footer></app-footer>
 </div>
+<app-footer></app-footer>
