--- a/src/app/pages/partners-page/partners-page.component.html
+++ b/src/app/pages/partners-page/partners-page.component.html
@@ -49,50 +49,55 @@
         <div>
             Name
         </div>
+        <div>
+            Name
+        </div>
     </div>
 </div>
-<div class="join-section">
-    <div>
-        <p>
-            Join us in creating unforgettable journeys! We're always looking for like-minded partners to collaborate
-            with, from accommodation providers and tour guides to local businesses and service providers. Together, we
-            can enhance the travel experience and help more people explore the magic of Egypt.
-        </p>
+<div class="second-section">
+    <div class="join-section">
+        <div class="first-p">
+            <p>
+                Join us in creating unforgettable journeys! We're always looking for like-minded partners to collaborate
+                with, from accommodation providers and tour guides to local businesses and service providers. Together, we
+                can enhance the travel experience and help more people explore the magic of Egypt.
+            </p>
+        </div>
+        <div class="second-p">
+            <p>
+                Here's how to join us:
+            </p>
+            <ul>
+                <li>
+                    1. Fill out our Partner Application Form.
+                </li>
+                <li>
+                    2. Our team will review your application and reach out to discuss the next steps.
+                </li>
+                <li>
+                    3. Start collaborating with us to deliver unique travel experiences!
+                </li>
+                <li>
+                    Ready to partner with us?
+                </li>
+            </ul>
+        </div>
     </div>
-    <div>
-        <p>
-            Here's how to join us:
-        </p>
-        <ul>
-            <li>
-                1. Fill out our Partner Application Form.
-            </li>
-            <li>
-                2. Our team will review your application and reach out to discuss the next steps.
-            </li>
-            <li>
-                3. Start collaborating with us to deliver unique travel experiences!
-            </li>
-            <li>
-                Ready to partner with us?
-            </li>
-        </ul>
+    <div class="form-section">
+        <form>
+            <input placeholder="business name" type="text" />
+            <input placeholder="type of business" type="text" />
+            <input placeholder="website" type="text" />
+            <input placeholder="Address" type="text" />
+            <input placeholder="email" type="email" />
+            <input placeholder="phone number" type="text" />
+            <textarea placeholder="why do you want to partner with us?"></textarea>
+            <textarea placeholder="what services or benefits can you offer to travelers?"></textarea>
+            <textarea placeholder="additional information or proposal"></textarea>
+            <button type="submit">
+                SEND
+            </button>
+        </form>
     </div>
-</div>
-<div class="form-section">
-    <form>
-        <input placeholder="business name" type="text" />
-        <input placeholder="type of business" type="text" />
-        <input placeholder="website" type="text" />
-        <input placeholder="Address" type="text" />
-        <input placeholder="email" type="email" />
-        <input placeholder="phone number" type="text" />
-        <textarea placeholder="why do you want to partner with us?"></textarea>
-        <textarea placeholder="what services or benefits can you offer to travelers?"></textarea>
-        <textarea placeholder="additional information or proposal"></textarea>
-        <button type="submit">
-            SEND
-        </button>
-    </form>
 </div>
 <app-footer></app-footer>
