--- a/src/app/pages/testimonials-page/testimonials-page.component.css
+++ b/src/app/pages/testimonials-page/testimonials-page.component.css
@@ -1,24 +1,21 @@
 .tour-section {
     text-align: center;
     padding: 50px;
-    background-color: #f0e3d3;
+    background-color: var(--primary-light);
   }
   
   .tour-section h1 {
     font-size: 3em;
     margin-bottom: 10px;
     color:black;
-    font-family:'Times New Roman', Times, serif;
+    font-family: var(--kFont-Bebas);
     font: bold;
-  
-  
   }
   
   .tour-section h6 {
-  
+    font-family: var(--kFont-Jos);
     color:black;
   }
-
 
   .testimonials {
     display: flex;
@@ -100,8 +97,10 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 2px;
-    width: 98%;
+    width: 100%;
     height: 298;
+    padding: 20px 50px 50px 50px;
+    background-color: var(--primary-light);
   }
   
   @media (max-width: 550px) {
